--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   equatable: ^2.0.3
   google_fonts: ^2.1.0
   http: ^0.13.3
-  provider: ^5.0.0
+  flutter_bloc: ^8.0.1
   dartz: ^0.10.0-nullsafety.2
   flutter_rating_bar: ^4.0.0
   cached_network_image: ^3.0.0
@@ -27,7 +27,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   mockito: ^5.0.8
   build_runner: ^2.0.4
-
+  bloc_test: ^9.0.2
 # For information on the generic Dart part of this file, see the
 # following pages: https://dart.dev/tools/pub/pubspec
 
