--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^5.0.0
+  flutter_bloc: ^8.0.1
   dartz: ^0.10.0-nullsafety.2
   get_it: ^7.1.3
   path_provider: ^2.0.2
