--- a/search/pubspec.yaml
+++ b/search/pubspec.yaml
@@ -10,9 +10,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   core:
     path: ../core
+
   dartz: ^0.10.0
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
+  get_it: ^7.1.3
+  path_provider: ^2.0.2
+  rxdart: ^0.27.3
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +27,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   mockito: ^5.0.8
   build_runner: ^2.0.4
-
+  bloc_test: ^9.0.2
 # For information on the generic Dart part of this file, see the
 # following pages: https://dart.dev/tools/pub/pubspec
 
