--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -40,17 +40,18 @@ dependencies:
   dartz: ^0.10.0-nullsafety.2
   get_it: ^7.1.3
   path_provider: ^2.0.2
+  http_certificate_pinning: ^2.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  mockito: ^5.0.8
+  bloc_test: ^9.0.2
 # For information on the generic Dart part of this file, see the
 # following pages: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
