--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
   http_certificate_pinning: ^2.0.3
-
+  firebase_crashlytics: ^2.4.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
