--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   get_it: ^7.1.3
   path_provider: ^2.0.2
   http_certificate_pinning: ^2.0.3
+  firebase_core: ^1.6.0
+  firebase_crashlytics: ^2.4.5
 
 dev_dependencies:
   flutter_test:
